--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 	<div class="footer-top">
 		<div class="wrapper">
 
-			<h2 class="footer-heading">{{ site.title }}</h2>
+			<div style="text-align: center;padding: 60px; margin-top:60px;">footer</div>
 
 		</div>
 	</div>
