--- a/_includes/eq-finder.html
+++ b/_includes/eq-finder.html
@@ -1,6 +1,6 @@
 
 
-<div class="eq-finder">
+<section class="eq-finder">
 	
 	<div class="wrapper">
 		
@@ -31,4 +31,4 @@
 
 	</div>
 
-</div>
+</section>
