--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,19 @@
 
     <a class="site-logo" href="{{ site.baseurl }}/"><img src="images/rme-logo-wt.svg"></a>
 
-    
+	<div class="menu">
+		
+		<div class="util-nav">
+		    <a href="#">Location</a>
+		    <a href="#">Dealer Locater</a>
+		    <a href="#">My Account</a>
+	    </div>
+	    <nav class="site-nav">
+	    	
+	    </nav>
 
+	</div>
+	
   </div>
 
 </header>
