--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -16,6 +16,7 @@ $g-radius: 4px;
 $red-dark: #8b0e04;
 $red-light: #b10f21;
 
+$black: #111;
 $grey-dark:#3E3E3E;
 $grey: #59585B;
 $grey-light: #F0F0F0;
@@ -31,6 +32,7 @@ $content-width:    1200px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
+$global-transition: all 0.2s;
 
 
 // Use media queries like this:
