--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -122,7 +122,7 @@
         right:0;
         bottom:0;
 
-        background-color: rgba(0,0,0,0.4);
+        background-color: rgba($black,0.3);
 
         text-decoration: none;
 
@@ -133,7 +133,7 @@
         transition: all 0.2s;
 
         &:hover {
-            background-color: rgba(0,0,0, 0.7);
+            background-color: rgba($black, 0.6);
         }
 
 
@@ -142,6 +142,7 @@
     h2 {
         color: #fff;
         text-transform: uppercase;
+        line-height: 1.1;
         font-weight: 800;
         font-size: 32px;
         text-shadow: 0 0 5px rgba(black,0.8);
@@ -161,7 +162,6 @@
 
     h2 {
         font-size: 40px;
-        line-height: 1.1;
     }
 
 }
@@ -260,26 +260,8 @@
         max-width: 240px;
     }
 
-    >a {
-        position: absolute;
-        top:0;
-        left:0;
-        right:0;
-        bottom:0;
-
-        background-color: rgba(0,0,0,0.4);
-
-        text-decoration: none;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        transition: all 0.2s;
-
-        &:hover {
-            background-color: rgba(0,0,0, 0.7);
-        }
+    &:hover {
+        background-color: darken($grey-light, 10%);
     }
 }
 
