--- a/_includes/widgets.html
+++ b/_includes/widgets.html
@@ -4,23 +4,23 @@
 	<div class="wrapper">
 	
 		<div class="widgets">
-			<div class="widget widget--logo">
-				<a href="#">
-					<img src="images/logo-dealzone.png" alt="RME dealzone">
-				</a>
-			</div>
+			<a class="widget widget--logo" href="#">
+				
+				<img src="images/logo-dealzone.png" alt="RME dealzone">
+				
+			</a>
 			
-			<div class="widget widget--logo">
-				<a href="#">
-					<img src="images/logo-eqfinder.png" alt="RME Equipment Finder">
-				</a>
-			</div>
+			<a class="widget widget--logo" href="#">
+				
+				<img src="images/logo-eqfinder.png" alt="RME Equipment Finder">
+				
+			</a>
 
-			<div class="widget widget--logo">
-				<a href="#">
-					<img src="images/logo-geo.png" alt="RME Geomatics">
-				</a>
-			</div>
+			<a class="widget widget--logo" href="#">
+				
+				<img src="images/logo-geo.png" alt="RME Geomatics">
+				
+			</a>
 		</div>
 
 
