Home, Ag, Construction
Completed the 3 landing pages

--- a/_includes/eq-finder.html
+++ b/_includes/eq-finder.html
@@ -4,7 +4,7 @@
 	
 	<div class="wrapper">
 		
-		<h3>Equipment Finder</h3>
+		<h3><i class="fa fa-search"></i>&nbsp;&nbsp;Equipment Finder</h3>
 
 		<div class="eq-finder__inputs">
 			
