--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,19 @@
 	<div class="footer-top">
 		<div class="wrapper">
 
-			<div style="text-align: center;padding: 60px; ">footer</div>
+			<div class="deal-zone">
+				<strong>Looking for used equipment?</strong>
+				<img src="images/logo-dealzone.png" alt="RME dealzone">
+			</div>
 
+			<div class="find-dealer">
+				<div class="search-control">
+					<label for="find-dealer">Find a dealer</label>
+						<input id="find-dealer" type="text" placeholder="Enter your postal code"></input>
+						<a class="button">Search</a>
+				</div>
+			</div>
+			
 		</div>
 	</div>
 
