--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
 		    <a href="#">My Account</a>
 	    </div>
 	    <nav class="site-nav">
-	    	
+	    	<a href="#"><i class="fa fa-search"></i></a>
 	    </nav>
 
 	</div>
