--- a/_includes/widgets.html
+++ b/_includes/widgets.html
@@ -3,7 +3,7 @@
 	
 	<div class="wrapper">
 	
-		<div class="widgets">
+		<!-- <div class="widgets">
 			<a class="widget widget--logo" href="#">
 				
 				<img src="images/logo-dealzone.png" alt="RME dealzone">
@@ -21,23 +21,54 @@
 				<img src="images/logo-geo.png" alt="RME Geomatics">
 				
 			</a>
-		</div>
+		</div> -->
 
 
 		<div class="widgets">
 			<div class="widget widget--parts">
-				<h3>Parts &amp; Services</h3>
-				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta laboriosam maxime suscipit, ad necessitatibus id, odio dolorum voluptatem, esse nam, iure quaerat a harum. Quaerat.</div>
+				<h3><i class="fa fa-cogs fa-lg"></i>&nbsp;&nbsp;Parts &amp; Services</h3>
+				<p>RME has the selection and expertise to keep your equipment precise, productive and profitable.</p>
+				
+				<form>
+					<div class="search-control">
+						
+						<label for="parts-search">Search for parts</label>
+						<input id="parts-search" type="text" placeholder="Enter your parts number"></input>
+						<a class="button">Go</a>	
+
+					</div>
+				</form>
+
+				<a href="#">See all of our services <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></a>
+
 			</div>
 			
 			<div class="widget widget--news">
-				<h3>Industry News</h3>
-				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non ipsa iusto qui eligendi sint maiores cumque provident minus dolor beatae sequi, vero veniam, reiciendis libero.</div>
+				<h3><i class="fa fa-newspaper-o fa-lg"></i>&nbsp;&nbsp;Industry News</h3>
+				<ul class="news-list">
+					<li>
+						<h4>Example article heading</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis laudantium.</p>
+						<time>May 2, 2016</time>
+					</li>
+					<li>
+						<h4>News article title</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel ducimus repudiandae.</p>
+						<time>April 15, 2016</time>
+					</li>
+					<li>
+						<h4>Another example news article</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, in quos qui.</p>
+						<time>April 11, 2016</time>
+					</li>
+				</ul>
 			</div>
 			
 			<div class="widget widget--tools">
-				<h3>Tools</h3>
-				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa dolorem aspernatur neque, vel maxime quibusdam, explicabo reiciendis recusandae doloremque modi facere error, aliquid, fugiat facilis?</div>
+				<h3><i class="fa fa-wrench fa-lg"></i>&nbsp;&nbsp;Tools</h3>
+				<a href="#" class="tools__links"><i class="fa fa-calculator fa-fw" aria-hidden="true"></i> Finance Calculator</a>
+				<a href="#" class="tools__links"><i class="fa fa-user fa-fw" aria-hidden="true"></i> My Account</a>
+				<a href="#" class="tools__links"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> Newsletter</a>
 			</div>
 		</div>
 
