--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -21,7 +21,8 @@ $grey-dark:#3E3E3E;
 $grey: #59585B;
 $grey-light: #F0F0F0;
 
-$yellow: #EF9C38;
+$orange: #EF9C38;
+$orange-dark: darken(#EF9C38, 10%);
 
 $text-color:       $grey-dark;
 $background-color: #fff;
