--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -97,12 +97,12 @@ a {
     transition: $global-transition;
 
     &:visited {
-        color: darken($red-light, 15%);
+        color: $red-light;
     }
 
     &:hover {
         cursor: pointer;
-        color: $text-color;
+        color: $red-dark;
         text-decoration: underline;
     }
 }
@@ -134,6 +134,14 @@ a {
         background-color: #fff;
         color: $black;
         box-shadow: 0 1px 4px 2px rgba(0,0,0,0.6);
+    }
+}
+
+.button--orange {
+    background-color: $orange;
+
+    &:hover {
+        background-color: $orange-dark;
     }
 }
 
