--- a/_includes/header-wt.html
+++ b/_includes/header-wt.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-logo" href="{{ site.baseurl }}/"><img src="images/rme-logo.svg"></a>
+    <a class="site-logo" href="index.html"><img src="images/rme-logo.svg"></a>
 
 	<div class="menu">
 		
