--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 
 			<div class="deal-zone">
 				<strong>Looking for used equipment?</strong>
-				<img src="images/logo-dealzone.png" alt="RME dealzone">
+				<a href="http://rmedealzone.ca/" target="_blank"><img src="images/logo-dealzone.png" alt="RME dealzone"></a>
 			</div>
 
 			<div class="find-dealer">
@@ -41,3 +41,7 @@
 	</div>
 
 </footer>
+
+<script src="js/jquery-2.2.3.min.js"></script>
+
+<script src="js/app.js"></script>
