--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -145,6 +145,16 @@ a {
     }
 }
 
+.button--text {
+    color: $red-light;
+    background-color: transparent;
+
+    &:hover {
+        color: $red-dark;
+        background-color: transparent;
+    }
+}
+
 
 /**
  * Blockquotes
