--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -20,6 +20,7 @@ $black: #111;
 $grey-dark:#3E3E3E;
 $grey: #59585B;
 $grey-light: #F0F0F0;
+$grey-light-d: darken($grey-light,15%);
 
 $orange: #EF9C38;
 $orange-dark: darken(#EF9C38, 10%);
@@ -35,6 +36,9 @@ $on-laptop:        800px;
 
 $global-transition: all 0.2s;
 
+.flex-c {
+	display: flex;
+}
 
 // Use media queries like this:
 // @include media-query($on-palm) {
@@ -54,5 +58,7 @@ $global-transition: all 0.2s;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
+        "forms",
+        "components",
         "layout"
 ;
