--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -110,11 +110,12 @@ a {
 .button {
     display: inline-block;
     padding: $spacing-unit/4 $spacing-unit/2;
-    line-height: 1.3;
+    line-height: 1.4;
     border-radius: $g-radius;
     text-transform: uppercase;
     font-size: .8rem;
     font-weight: bold;
+    letter-spacing: 1px;
 
     color: #fff;
     background-color: $red-light;
@@ -151,7 +152,7 @@ a {
 
     &:hover {
         color: $red-dark;
-        background-color: transparent;
+        background-color: rgba(0,0,0,0.05);
     }
 }
 
