--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -9,7 +9,7 @@
             position: relative;
             padding: $spacing-unit/2 $spacing-unit;
             
-            border: solid 1px $grey;
+            border: solid 1px $grey-light-d;
             border-top-color: transparent;
             border-right-color: transparent;
             border-left-color: transparent;
@@ -21,9 +21,9 @@
             &:after {
                 content: '';
                 position: absolute;
-                top: 1px;
-                left: 1px;
-                right: 1px;
+                top: 0;
+                left: 0;
+                right: 0;
                 height: 3px;
 
                 background-color:transparent;
@@ -32,17 +32,21 @@
             }
 
             &:hover {
-                background-color: rgba(0,0,0,0.1);
+                background-color: rgba(0,0,0,0.05);
                 border-color: $grey-light-d;
-                border-bottom-color: $grey;
+                border-bottom-color: $grey-light-d;
                 text-decoration: none;
+
+                &:after {
+                    background-color: $grey-light-d;
+                }
             }
 
             &.active {
                 color: $black;
-                border-top: solid 1px $grey;
-                border-right: solid 1px $grey;
-                border-left: solid 1px $grey;
+                border-top: solid 1px $grey-light-d;
+                border-right: solid 1px $grey-light-d;
+                border-left: solid 1px $grey-light-d;
                 border-bottom-color: transparent;
                 background-color: transparent;
 
@@ -60,7 +64,7 @@
         &:after {
             content: '';
             flex: 1;
-            border-bottom: solid 1px $grey;
+            border-bottom: solid 1px $grey-light-d;
         }
         
     }
