--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,6 +7,7 @@ $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
+$xsmall-font-size:  $base-font-size * 0.625;
 $base-line-height: 1.4;
 
 $spacing-unit:     30px;
@@ -21,7 +22,7 @@ $grey-dark:#3E3E3E;
 $grey: #59585B;
 $grey-l: lighten($grey,15%);
 $grey-light: #F0F0F0;
-$grey-light-d: darken($grey-light,15%);
+$grey-light-d: darken($grey-light,10%);
 
 $orange: #EF9C38;
 $orange-dark: darken(#EF9C38, 10%);
@@ -36,10 +37,6 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 $global-transition: all 0.2s;
-
-.flex-c {
-	display: flex;
-}
 
 // Use media queries like this:
 // @include media-query($on-palm) {
