--- a/_includes/eqf-form.html
+++ b/_includes/eqf-form.html
@@ -33,6 +33,7 @@
 			<input type="text"></input>
 
 		</div>
+
 		<div class="col-2">
 			<label>Stock Number</label>
 			<input type="text"></input>
@@ -59,9 +60,9 @@
 			</div>
 			
 		</div>
-		<div class="col-3">
-			<div class="set-alert"><label><input type="checkbox"> Save alert using search criteria</label></div>
-			<div class="form-controls"><a href="#" class="button button--text">Reset</a><a class="button">Search</a></div>
+		<div class="col-3 form-footer">
+			<div class="set-alert checkbox-modifier"><label><input type="checkbox">&nbsp;Save alert using search criteria</label></div>
+			<div class="form-controls"><a href="#" class="button button--text">Reset</a><a href="ef-search.html" class="button">Search</a></div>
 		</div>
 	</div>
 
