--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -899,7 +899,7 @@ section.feat-eq {
     }
 }
 
-/* Equipment finder search results page*/
+/* Equipment finder search results page */
 
 section.search-results {
 
@@ -939,7 +939,8 @@ section.search-results {
         display:flex;
         justify-content: space-between;
         align-items: center;
-        padding: $spacing-unit/2;
+        padding: $spacing-unit/4;
+        border-bottom: solid 1px $grey-light-d;
 
         .sort,.view,.rpp {
             display: flex;
@@ -950,9 +951,38 @@ section.search-results {
 
     .bottom {
         display:flex;
-        justify-content: space-between;
         align-items: center;
-        padding: $spacing-unit/2;
+        padding: $spacing-unit/4;
+        
+        .results {
+            flex:1;
+        }
+        .pagination {
+            flex: 3;
+            text-align: center;
+        }
+        .new-search {
+            flex: 1;
+            text-align: right;
+        }
+    }
+
+    .filter-button {
+        padding: $spacing-unit/4 $spacing-unit/2;
+        line-height: 1.3;
+        color: $grey;
+        background-color: $grey-light;
+        outline: solid 1px $grey-light-d;
+
+        &:hover {
+            color: $black;
+        }
+
+        &.active {
+            color: #fff;
+            background-color: $red-light;
+
+        }
     }
 
 }
